--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -4330,9 +4330,9 @@ fieldset:disabled .btn {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+  width: 2rem;
 }
 .navbar-nav {
   display: flex;
