--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -11,6 +11,58 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+/*desmarcado*/
+
+.fav-position {
+  top: 0.2rem;
+  right: 1rem;
+}
+
+.fav-container {
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+@media (max-width: 576px) {
+  .fav-container {
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+  }
+}
+
+.fav+label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../assets/empty.png);
+  background-size: cover;
+}
+
+/*oculatamos el input*/
+
+.fav {
+  display: none;
+}
+
+/*marcado*/
+
+.fav:checked+label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(../../assets/filled.png);
+  background-size: cover;
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
