--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -99,6 +99,11 @@ h6 {
   margin-bottom: 0.5rem;
 }
 
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
