--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -308,8 +308,7 @@ button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
 }
-input[type="text"],
-[type="number"],
+.loginForm-field,
 select,
 textarea {
   background: none;
