--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -6143,6 +6143,8 @@ input[type="button"].btn-block {
 
 .card-img-top {
   width: 100%;
+  height: 12rem;
+  object-fit: cover;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
