--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -6143,10 +6143,11 @@ input[type="button"].btn-block {
 
 .card-img-top {
   width: 100%;
-  height: 12rem;
+  height: 11rem;
   object-fit: cover;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .card-img-bottom {
