--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -132,6 +132,9 @@
   border-bottom: 0.5px solid gray;
   margin-bottom: 10px;
 }
+.labelVendido {
+  position: absolute;
+}
 
 .reservado {
   z-index: 10;
