--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -118,6 +118,7 @@
     the confirm box*/
 }
 
+/* Fav Button */
 /*desmarcado*/
 
 .fav-position {
@@ -133,6 +134,32 @@
   width: 1.5rem;
   height: 1.5rem;
 }
+
+/*oculatamos el input*/
+
+.fav {
+  display: none;
+}
+
+/*marcado*/
+
+.fav:checked+label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(/src/assets/filled.png);
+  background-size: cover;
+}
+
+.fav+label {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(/src/assets/empty.png);
+  background-size: cover;
+}
+
+/* Detalle del producto */
 
 @media (max-width: 576px) {
   .fav-container {
@@ -161,7 +188,6 @@
   width: 70%;
 }
 
-/* Detalle del producto */
 .chat {
   font-size: 13px;
   background: white;
@@ -249,30 +275,6 @@
   border: 1px solid gray;
   padding: 3px;
   border-radius: 10px;
-}
-
-.fav+label {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: url(/src/assets/empty.png);
-  background-size: cover;
-}
-
-/*oculatamos el input*/
-
-.fav {
-  display: none;
-}
-
-/*marcado*/
-
-.fav:checked+label {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: url(/src/assets/filled.png);
-  background-size: cover;
 }
 
 *,
