--- a/src/bootstrap/style.css
+++ b/src/bootstrap/style.css
@@ -10247,7 +10247,7 @@ button.bg-dark:focus {
   margin-left: 3rem !important;
 }
 
-.newAdvertPage, .updateProfile {
+.newAdvertPage, .updateProfile, .deleteUserDiv{
   background-color: white;
   border-radius: 20px;
 }
