--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -56,3 +56,7 @@
   -moz-box-shadow: 0px 0px 8px #7bc1f7;
   -webkit-box-shadow: 0px 0px 8px #7bc1f7;
 }
+
+.element-menu {
+  justify-content: flex-end;
+}
