--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -10,14 +10,18 @@
   flex-wrap: wrap;
 } */
 
-.flex-container {
+/* .flex-container {
   margin: 10px;
-}
+} */
 
 .flex-items {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  align-items: center;
+  justify-items: center;
+  gap: 1rem;
+  margin: 20px;
+  place-content: center;
 }
 
 /* .flex-adverts {
@@ -25,12 +29,17 @@
   align-items: stretch;
 } */
 
+.submit {
+  place-content: center;
+  /* grid-column: 1 / span 4; */
+}
+
 .boton {
   text-decoration: none;
   padding: 10px;
-  width: 180px;
+  width: 120px;
   font-weight: 600;
-  font-size: 13px;
+  font-size: 12px;
   color: #000;
   background-color: #fff;
   border-radius: 6px;
@@ -44,7 +53,7 @@
 .textbox {
   border: 1px solid #c4c4c4;
   height: 25px;
-  width: 180px;
+  width: 120px;
   font-size: 13px;
   padding: 4px 4px 4px 4px;
   border-radius: 4px;
@@ -63,9 +72,6 @@
   -webkit-box-shadow: 0px 0px 8px #7bc1f7;
 }
 
-/* .element-menu {
-  justify-content: flex-end;
-}  */
 .deleteUser {
   background: red;
   color: black;
