--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -64,7 +64,42 @@
   -webkit-box-shadow: 0px 0px 8px #d9d9d9;
 }
 
+.error-input {
+  border: 1px solid red;
+  height: 25px;
+  width: 120px;
+  font-size: 13px;
+  padding: 4px 4px 4px 4px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  box-shadow: 0px 0px 8px #d9d9d9;
+  -moz-box-shadow: 0px 0px 8px #d9d9d9;
+  -webkit-box-shadow: 0px 0px 8px #d9d9d9;
+}
+
 .textbox:focus {
+  outline: none;
+  border: 1px solid #7bc1f7;
+  box-shadow: 0px 0px 8px #7bc1f7;
+  -moz-box-shadow: 0px 0px 8px #7bc1f7;
+  -webkit-box-shadow: 0px 0px 8px #7bc1f7;
+}
+
+.select-header {
+  height: 25px;
+  width: 120px;
+  font-size: 13px;
+  padding: 4px 4px 4px 4px;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  box-shadow: 0px 0px 8px #d9d9d9;
+  -moz-box-shadow: 0px 0px 8px #d9d9d9;
+  -webkit-box-shadow: 0px 0px 8px #d9d9d9;
+}
+
+.select-header:focus {
   outline: none;
   border: 1px solid #7bc1f7;
   box-shadow: 0px 0px 8px #7bc1f7;
@@ -81,4 +116,20 @@
   background: #ff4747;
   color: white;
   font-weight: bold;
+}
+
+.banderas {
+  border: none;
+  cursor: pointer;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  width: 30px;
+  margin-left: 10px;
+}
+
+.banderas img {
+  width: 100%;
 }
