chat production version 3.0

--- a/src/chat/chat/chat.css
+++ b/src/chat/chat/chat.css
@@ -99,7 +99,7 @@
 }
 
 .chats .send input {
-  color: black;
+  color: white;
   width: 80%;
   text-decoration: none;
   background-color: #404450;
