--- a/src/chat/chat/chat.css
+++ b/src/chat/chat/chat.css
@@ -1,3 +1,9 @@
+.user-name {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .chats {
   width: 100%;
   height: 600px;
@@ -8,14 +14,15 @@
 }
 
 .chats .user-name {
-  text-align: start;
+  text-align: center;
   width: 100%;
 }
 
-.chats .user-name h2 {
+.chats .user-name {
   font-weight: 300;
   border-bottom: 1px solid black;
   padding-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .chats .chats-message {
