internalizacion new user

--- a/src/components/layout/styles.css
+++ b/src/components/layout/styles.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-items: center;
   gap: 1rem;
-  margin: 20px;
+  margin: 30px 30px 40px 30px;
   place-content: center;
 }
 
