--- a/src/chat/chat/chat.css
+++ b/src/chat/chat/chat.css
@@ -4,6 +4,14 @@
   justify-content: space-between;
 }
 
+.link-name {
+  border: 1px solid black;
+  padding: 0.3rem;
+  border-radius: 10px;
+  background-color: #404450;
+  font-size: 1.5rem;
+}
+
 .chats {
   width: 100%;
   height: 600px;
@@ -66,7 +74,7 @@
   padding: 1rem;
   border-radius: 0px 10px 10px 10px;
   font-weight: 300;
-  color: #b4b6be;
+  color: white;
 }
 
 .chats .chats-message .message span {
